POS renommés gold_labels

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -66,12 +66,12 @@
     "    content = content.split(\"\\n\\n\") # séparation en phrases\n",
     "    corpus = []\n",
     "    for phrase in content: # pour chaque phrase\n",
-    "        phrase_dico = {\"mots\" : [], \"POS\" : []} # liste qui contiendra 1 dictionnaire par mot de la phrase\n",
+    "        phrase_dico = {\"mots\" : [], \"gold_labels\" : []} # liste qui contiendra 1 dictionnaire par mot de la phrase\n",
     "        for line in phrase.splitlines():\n",
     "            if not line.startswith(\"#\"): # on ignore les lignes qui commencent par #\n",
     "                features = line.split(\"\\t\")\n",
     "                phrase_dico[\"mots\"].append(features[1])\n",
-    "                phrase_dico[\"POS\"].append(features[3])\n",
+    "                phrase_dico[\"gold_labels\"].append(features[3])\n",
     "        corpus.append(phrase_dico)\n",
     "    return corpus\n",
     "\n",
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "---- Aperçus d'une phrase de chaque corpus-----\n\n{'mots': [\"L'\", 'œuvre', 'est', 'située', 'dans', 'la', 'galerie', 'des', 'de', 'les', 'batailles', ',', 'dans', 'le', 'château', 'de', 'Versailles', '.'], 'POS': ['DET', 'NOUN', 'AUX', 'VERB', 'ADP', 'DET', 'NOUN', '_', 'ADP', 'DET', 'NOUN', 'PUNCT', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'PUNCT']}\n\n{'mots': ['Ce', 'résultat', 'provient', 'à', 'hauteur', 'de', '18,5', 'ME', 'de', 'la', 'progression', 'de', 'la', 'rentabilité', 'de', \"l'\", 'habitat', 'de', 'loisirs', 'qui', 'dégage', 'une', 'marge', 'opérationnelle', 'de', '9,5', '%', 'contre', '8,5', '%', \"l'\", 'année', 'passée', '.'], 'POS': ['DET', 'NOUN', 'VERB', 'ADP', 'NOUN', 'ADP', 'NUM', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'NOUN', 'PRON', 'VERB', 'DET', 'NOUN', 'ADJ', 'ADP', 'NUM', 'SYM', 'ADP', 'NUM', 'SYM', 'DET', 'NOUN', 'ADJ', 'PUNCT']}\n\n{'mots': ['Cette', 'espèce', 'est', 'endémique', 'du', 'de', 'le', 'département', 'de', 'Nariño', 'en', 'Colombie', '.'], 'POS': ['DET', 'NOUN', 'AUX', 'ADJ', '_', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'ADP', 'PROPN', 'PUNCT']}\n"
+      "---- Aperçus d'une phrase de chaque corpus-----\n\n{'mots': [\"L'\", 'œuvre', 'est', 'située', 'dans', 'la', 'galerie', 'des', 'de', 'les', 'batailles', ',', 'dans', 'le', 'château', 'de', 'Versailles', '.'], 'gold_labels': ['DET', 'NOUN', 'AUX', 'VERB', 'ADP', 'DET', 'NOUN', '_', 'ADP', 'DET', 'NOUN', 'PUNCT', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'PUNCT']}\n\n{'mots': ['Ce', 'résultat', 'provient', 'à', 'hauteur', 'de', '18,5', 'ME', 'de', 'la', 'progression', 'de', 'la', 'rentabilité', 'de', \"l'\", 'habitat', 'de', 'loisirs', 'qui', 'dégage', 'une', 'marge', 'opérationnelle', 'de', '9,5', '%', 'contre', '8,5', '%', \"l'\", 'année', 'passée', '.'], 'gold_labels': ['DET', 'NOUN', 'VERB', 'ADP', 'NOUN', 'ADP', 'NUM', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'NOUN', 'PRON', 'VERB', 'DET', 'NOUN', 'ADJ', 'ADP', 'NUM', 'SYM', 'ADP', 'NUM', 'SYM', 'DET', 'NOUN', 'ADJ', 'PUNCT']}\n\n{'mots': ['Cette', 'espèce', 'est', 'endémique', 'du', 'de', 'le', 'département', 'de', 'Nariño', 'en', 'Colombie', '.'], 'gold_labels': ['DET', 'NOUN', 'AUX', 'ADJ', '_', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'ADP', 'PROPN', 'PUNCT']}\n"
      ]
     }
    ],
@@ -117,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "('mots', ['Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.'])\n('POS', ['PROPN', 'VERB', 'CCONJ', 'VERB', 'SCONJ', 'PRON', 'AUX', 'PROPN', 'PRON', 'AUX', 'VERB', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADJ', 'PUNCT'])\n('préc', ['START', 'Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine'])\n('suiv', ['entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.', 'END'])\n('maj', [True, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False])\n('nb', [False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False])\n('non alphanum', [False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True])\n('longueur', [6, 5, 2, 7, 3, 2, 3, 7, 3, 1, 3, 2, 3, 1, 2, 6, 7, 1])\n"
+      "('mots', ['Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.'])\n('gold_labels', ['PROPN', 'VERB', 'CCONJ', 'VERB', 'SCONJ', 'PRON', 'AUX', 'PROPN', 'PRON', 'AUX', 'VERB', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADJ', 'PUNCT'])\n('préc', ['START', 'Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine'])\n('suiv', ['entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.', 'END'])\n('maj', [True, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False])\n('nb', [False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False])\n('non alphanum', [False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True])\n('longueur', [6, 5, 2, 7, 3, 2, 3, 7, 3, 1, 3, 2, 3, 1, 2, 6, 7, 1])\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
     "    \n",
     "    # clés des dictionnaires\n",
     "    mots = \"mots\"\n",
-    "    pos = \"POS\"\n",
+    "    gold = \"gold_labels\"\n",
     "    mot_prec = \"préc\"\n",
     "    mot_suiv = \"suiv\"\n",
     "    maj = \"maj\"\n",
