Restructuration corpus de features (mots indépendants des phrases)

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,37 +103,34 @@
   {
    "source": [
     "## Extraction des caractéristiques\n",
-    "Pour clarifier le pipeline, nous allons créer de nouveaux corpus qui contiennent des nouvelles entrées dans les dictionnaires de chaque phrase afin de stocker les caractéristiques suivantes :\n",
+    "\n",
+    "La fonction feature_extraction renvoie une liste de dictionnaires (un par mot) qui contiennent les caractéristiques suivantes pour chaque mot :\n",
     "- mot\n",
     "- mot précédent : pour le premier mot de la phrase son mot précédent sera \"START\", ce qui permettra de prendre en compte la caractéristique \"être le premier mot\".\n",
     "- mot suivant : pour le dernier mot, ce sera \"END\".\n",
     "- commence par une lettre majuscule\n",
     "- est numérique\n",
     "- contient des caractères non alphanumériques\n",
-    "- longueur du mot"
+    "- longueur du mot\n",
+    "\n",
+    "Une fois que l'extraction des caractéristiques a été faite, on n'a plus besoin de conserver les phrases. Cela nous permettra de réellement mélanger tous les mots du corpus dans le perceptron."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "('mots', ['Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.'])\n('gold_labels', ['PROPN', 'VERB', 'CCONJ', 'VERB', 'SCONJ', 'PRON', 'AUX', 'PROPN', 'PRON', 'AUX', 'VERB', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADJ', 'PUNCT'])\n('préc', ['START', 'Ismene', 'entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine'])\n('suiv', ['entre', 'et', 'annonce', 'que', \"c'\", 'est', 'Farnace', 'qui', 'a', 'mis', 'le', 'feu', 'à', 'la', 'flotte', 'romaine', '.', 'END'])\n('maj', [True, False, False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False])\n('nb', [False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False])\n('non alphanum', [False, False, False, False, False, True, False, False, False, False, False, False, False, False, False, False, False, True])\n('longueur', [6, 5, 2, 7, 3, 2, 3, 7, 3, 1, 3, 2, 3, 1, 2, 6, 7, 1])\n"
-     ]
-    }
-   ],
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "def feature_extraction(corpus):\n",
     "    \n",
     "    # clés des dictionnaires\n",
-    "    mots = \"mots\"\n",
-    "    gold = \"gold_labels\"\n",
+    "    mot = \"mot\"\n",
+    "    gold = \"gold_label\"\n",
     "    mot_prec = \"préc\"\n",
     "    mot_suiv = \"suiv\"\n",
     "    maj = \"maj\"\n",
@@ -141,41 +138,92 @@
     "    nonAlphanum = \"non alphanum\"\n",
     "    long = \"longueur\"\n",
     "\n",
-    "    corpus_features = corpus.copy() # copie de la liste pour ne pas modifier la liste d'origine\n",
+    "    corpus_features = [] # copie de la liste pour ne pas modifier la liste d'origine\n",
     "\n",
-    "    for phrase in corpus_features: # ajout des features additionnelles\n",
-    "        phrase.update({mot_prec : [], mot_suiv : [], maj : [], num : [], nonAlphanum : [], long : []})\n",
+    "    for phrase in corpus: # ajout des features additionnelles\n",
     "        for prev, word, suiv in zip([\"START\"] + phrase[\"mots\"][:-1], phrase[\"mots\"], phrase[\"mots\"][1:] + [\"END\"]):\n",
     "            # création de triplets (mot précédent, mot, mot suivant)\n",
     "            # avec \"START\" en prev pour le 1er mot\n",
     "            # et \"END\" en suiv pour le dernier\n",
-    "            phrase[mot_prec].append(prev)\n",
-    "            phrase[mot_suiv].append(suiv)\n",
-    "            phrase[maj].append(word.istitle())\n",
-    "            phrase[num].append(word.isnumeric())\n",
-    "            phrase[nonAlphanum].append(not word.isalnum())\n",
-    "            phrase[long].append(len(word))\n",
+    "\n",
+    "            # ajout d'un dictionnaire de features du mot au corpus\n",
+    "            corpus_features.append({mot : word, \n",
+    "                gold : phrase[\"gold_labels\"][phrase[\"mots\"].index(word)], # on récupère le gold_label correspondant\n",
+    "                mot_prec : prev,\n",
+    "                mot_suiv : suiv,\n",
+    "                num : word.isnumeric(),\n",
+    "                nonAlphanum : not word.isalnum(),\n",
+    "                long : len(word)})\n",
     "\n",
     "    return corpus_features\n",
     "\n",
     "gsd_train_features = feature_extraction(gsd_train)\n",
-    "print(*gsd_train_features[4].items(), sep=\"\\n\")"
+    "gsd_dev_features = feature_extraction(gsd_dev)\n",
+    "gsd_test_features = feature_extraction(gsd_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'mot': 'sont', 'gold_label': 'AUX', 'préc': 'cérébrales', 'suiv': 'devenu', 'nb': False, 'non alphanum': False, 'longueur': 4}\n{'mot': 'devenu', 'gold_label': 'VERB', 'préc': 'sont', 'suiv': 'si', 'nb': False, 'non alphanum': False, 'longueur': 6}\n{'mot': 'si', 'gold_label': 'ADV', 'préc': 'devenu', 'suiv': 'courantes', 'nb': False, 'non alphanum': False, 'longueur': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(*gsd_train_features[3:6], sep=\"\\n\")"
    ]
   },
   {
    "source": [
     "## Implémentation de l'algorithme de classification\n",
-    "On a choisi d'implémenter la classification avec un perceptron moyenné."
+    "On a choisi d'implémenter la classification avec un perceptron moyenné.\n",
+    "\n",
+    "Etiquettes du corpus : ADJ, ADP, ADV, AUX, CCONJ, DET, INTJ, NOUN, NUM, PART, PRON, PROPN, PUNCT, SCONJ, SYM, VERB, X\n",
+    "\n",
+    "Sources : cours 3/12 + perceptron.pdf + zoom du 17/12"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def perceptron_train(training_set, MAX_EPOCH=10):\n",
+    "    tags = [\"ADJ\", \"ADP\", \"ADV\", \"AUX\", \"CCONJ\", \"DET\", \"INTJ\", \"NOUN\", \"NUM\", \"PART\", \"PRON\", \"PROPN\", \"PUNCT\", \"SCONJ\", \"SYM\", \"VERB\", \"X\"]\n",
+    "\n",
+    "    # TODO initialisation des poids : à zéros ou bien de manière aléatoire ??\n",
+    "    # je suis pas sûre du format de ces poids....\n",
+    "    a = [[0]*len(training_set[0]) for tag in tags] # poids moyennés\n",
+    "\n",
+    "    for i in range(0, MAX_EPOCH):\n",
+    "        w = [[0]*len(training_set[0]) for tag in tags] # initialisé du vecteur de poids\n",
+    "        shuffled_set = shuffle(training_set.copy()) # on mélange le training set\n",
+    "\n",
+    "        for phrase in shuffled_set:\n",
+    "            for word in phrase:\n",
+    "                prediction = max()\n",
+    "                # on cherche le tag le plus probable... mais comment ?... \n",
+    "                # il va falloir donner une probabilité à chaque mot dis donc.... ???\n",
+    "\n",
+    "                # on compare avec le gold_label\n",
+    "                # si mauvaise prédiction\n",
+    "                    #  on ajoute x(i) à chaque poids de l'étiquette correcte\n",
+    "                    #  on retire x(i) à chaque poids de l'étiquette mal prédite\n",
+    "\n",
+    "        # on ajoute w à a\n",
+    "    return a\n",
+    "\n",
+    "poids_gsd_train = perceptron_train(gsd_train_features)"
+   ]
   },
   {
    "source": [
