--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "def feature_extraction(corpus):\n",
     "\n",
-    "    corpus_features = [] # copie de la liste pour ne pas modifier la liste d'origine\n",
+    "    corpus_features = []\n",
     "\n",
     "    for phrase in corpus: # ajout des features additionnelles\n",
     "        for prev, word, suiv in zip([\"START\"] + phrase[\"mots\"][:-1], phrase[\"mots\"], phrase[\"mots\"][1:] + [\"END\"]):\n",
