--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -128,7 +128,14 @@
     "- commence par une lettre majuscule\n",
     "- est numérique\n",
     "- contient des caractères non alphanumériques\n",
-    "- longueur du mot\n",
+    "- longueur du mot : redéfinir 3 caractéristiques booléens/binaires : a 1 seule caractère, a moins de 3 caractères, a plus de 3 caractères.\n",
+    "- a un suffixe nominal\n",
+    "- a un suffixe adjectival\n",
+    "- a un suffixe verbal (ça marche que sur les lemmes !)\n",
+    "- a un suffixe adverbial (là ça marche sur la forme fléchie)\n",
+    "\n",
+    "Met-on dans les listes les suffixes qui appartiennent à 2 catégories ?\n",
+    "Peut-on utiliser les lemmes ?\n",
     "\n",
     "On pourrait ajouter des suffixes aussi. Par exemple une feature pourrait être \"finir en -ment\", une autre suffi_nominaux (-al, -ion, etc.), etc.\n",
     "\n",
@@ -192,7 +199,7 @@
   },
   {
    "source": [
-    "La fonction suivante transforme les dictionnaires en vecteurs one-hot, nécessaires pour l'apprentissage du perceptron."
+    "A SUPPRIMER PLUS TARD, ça ne sert à rien [ne surtout pas faire tourner]"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -353,8 +360,7 @@
     "            for word in phrase:\n",
     "                prediction = max()\n",
     "                # on cherche le tag le plus probable... mais comment ?... \n",
-    "                # il va falloir donner une probabilité à chaque mot dis donc.... ???\n",
-    "\n",
+    "                \n",
     "                # on compare avec le gold_label\n",
     "                # si mauvaise prédiction\n",
     "                    #  on ajoute x(i) à chaque poids de l'étiquette correcte\n",
