Rajout des suffixes

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.5-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,28 +66,35 @@
     "maj = \"maj\"\n",
     "num = \"nb\"\n",
     "nonAlphanum = \"non alphanum\"\n",
-    "long = \"longueur\""
+    "long = \"longueur\"\n",
+    "suff_adv = \"suffixe adv\"\n",
+    "suff_vb = \"suffixe verb\"\n",
+    "suff_noun = \"suffixe nom\"\n",
+    "suff_adj = \"suffixe adj\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "# j'ai juste rajouté l'encodage car j'avais une erreur sans \n",
+    "\n",
     "def load_corpus(file):\n",
-    "    with open(file, \"r\") as f:\n",
+    "    with open(file, \"r\", encoding = \"utf8\") as f: \n",
     "        content = f.read() # chargement du corpus\n",
     "    content = content.split(\"\\n\\n\") # séparation en phrases\n",
     "    corpus = []\n",
     "    for phrase in content: # pour chaque phrase\n",
-    "        phrase_dico = {\"mots\" : [], \"gold_labels\" : []} # liste qui contiendra 1 dictionnaire par mot de la phrase\n",
+    "        phrase_dico = {\"mots\" : [], \"gold_labels\" : [], \"lemme\" : []} # liste qui contiendra 1 dictionnaire par mot de la phrase\n",
     "        for line in phrase.splitlines():\n",
     "            if not line.startswith(\"#\"): # on ignore les lignes qui commencent par #\n",
     "                features = line.split(\"\\t\")\n",
     "                phrase_dico[\"mots\"].append(features[1])\n",
+    "                phrase_dico[\"lemme\"].append(features[2])\n",
     "                phrase_dico[\"gold_labels\"].append(features[3])\n",
     "        corpus.append(phrase_dico)\n",
     "    return corpus\n",
@@ -99,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "---- Aperçus d'une phrase de chaque corpus-----\n\n{'mots': [\"L'\", 'œuvre', 'est', 'située', 'dans', 'la', 'galerie', 'des', 'de', 'les', 'batailles', ',', 'dans', 'le', 'château', 'de', 'Versailles', '.'], 'gold_labels': ['DET', 'NOUN', 'AUX', 'VERB', 'ADP', 'DET', 'NOUN', '_', 'ADP', 'DET', 'NOUN', 'PUNCT', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'PUNCT']}\n\n{'mots': ['La', 'gestion', 'et', \"l'\", 'exploitation', 'de', 'la', 'salle', 'de', 'concert', 'Wagram', ',', 'récemment', 'rénovée', ',', 'sera', 'assurée', 'par', 'Eurosites', ',', 'leader', 'en', 'France', 'de', 'la', 'location', 'de', 'salles', '.'], 'gold_labels': ['DET', 'NOUN', 'CCONJ', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'NOUN', 'PROPN', 'PUNCT', 'ADV', 'VERB', 'PUNCT', 'AUX', 'VERB', 'ADP', 'PROPN', 'PUNCT', 'NOUN', 'ADP', 'PROPN', 'ADP', 'DET', 'NOUN', 'ADP', 'NOUN', 'PUNCT']}\n\n{'mots': ['Cette', 'espèce', 'est', 'endémique', 'du', 'de', 'le', 'département', 'de', 'Nariño', 'en', 'Colombie', '.'], 'gold_labels': ['DET', 'NOUN', 'AUX', 'ADJ', '_', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'ADP', 'PROPN', 'PUNCT']}\n"
+      "---- Aperçus d'une phrase de chaque corpus-----\n\n{'mots': [\"L'\", 'œuvre', 'est', 'située', 'dans', 'la', 'galerie', 'des', 'de', 'les', 'batailles', ',', 'dans', 'le', 'château', 'de', 'Versailles', '.'], 'gold_labels': ['DET', 'NOUN', 'AUX', 'VERB', 'ADP', 'DET', 'NOUN', '_', 'ADP', 'DET', 'NOUN', 'PUNCT', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'PUNCT'], 'lemme': ['le', 'œuvre', 'être', 'situer', 'dans', 'le', 'galerie', '_', 'de', 'le', 'bataille', ',', 'dans', 'le', 'château', 'de', 'Versailles', '.']}\n\n{'mots': ['La', 'gestion', 'et', \"l'\", 'exploitation', 'de', 'la', 'salle', 'de', 'concert', 'Wagram', ',', 'récemment', 'rénovée', ',', 'sera', 'assurée', 'par', 'Eurosites', ',', 'leader', 'en', 'France', 'de', 'la', 'location', 'de', 'salles', '.'], 'gold_labels': ['DET', 'NOUN', 'CCONJ', 'DET', 'NOUN', 'ADP', 'DET', 'NOUN', 'ADP', 'NOUN', 'PROPN', 'PUNCT', 'ADV', 'VERB', 'PUNCT', 'AUX', 'VERB', 'ADP', 'PROPN', 'PUNCT', 'NOUN', 'ADP', 'PROPN', 'ADP', 'DET', 'NOUN', 'ADP', 'NOUN', 'PUNCT'], 'lemme': ['le', 'gestion', 'et', 'le', 'exploitation', 'de', 'le', 'salle', 'de', 'concert', 'Wagram', ',', 'récemment', 'rénover', ',', 'être', 'assurer', 'par', 'Eurosites', ',', 'leader', 'en', 'France', 'de', 'le', 'location', 'de', 'salle', '.']}\n\n{'mots': ['Cette', 'espèce', 'est', 'endémique', 'du', 'de', 'le', 'département', 'de', 'Nariño', 'en', 'Colombie', '.'], 'gold_labels': ['DET', 'NOUN', 'AUX', 'ADJ', '_', 'ADP', 'DET', 'NOUN', 'ADP', 'PROPN', 'ADP', 'PROPN', 'PUNCT'], 'lemme': ['ce', 'espèce', 'être', 'endémique', '_', 'de', 'le', 'département', 'de', 'Nariño', 'en', 'Colombie', '.']}\n"
      ]
     }
    ],
@@ -137,7 +144,8 @@
     "Met-on dans les listes les suffixes qui appartiennent à 2 catégories ?\n",
     "Peut-on utiliser les lemmes ?\n",
     "\n",
-    "On pourrait ajouter des suffixes aussi. Par exemple une feature pourrait être \"finir en -ment\", une autre suffi_nominaux (-al, -ion, etc.), etc.\n",
+    "On pourrait ajouter des suffixes aussi. Par exemple une feature pourrait être \"finir en -ment\", une autre suffi_nominaux (-al, -ion, etc.), etc. \n",
+    "On est confrontées à un problème d'homonymie avec certains suffixes. Par exemple, -ains dans certains (pronom) et hautains (adj). A voir comment gérer ça. \n",
     "\n",
     "On ne conserve plus la structure des phrases, qui n'est plus nécessaire une fois qu'on a extrait les informations comme mot précédent et mot suivant."
    ],
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -155,12 +163,26 @@
     "def feature_extraction(corpus):\n",
     "\n",
     "    corpus_features = []\n",
+    "    \"\"\"\n",
+    "    Listes à utiliser pour les lemmes :\n",
+    "    list_adj = [\"ain\", \"aine\",\"aire\",\"é\", \"ée\",\"iel\", \"uel\", \"lle\",  \"al\", \"ales\", \"al\", \"ial\", \"aux\",\"iaux\",   \"er\", \"ère\", \"ier\", \"esque\", \"eur\", \"euse\", \"ieux\",\"ueux\", \"if\",\"ive\", \"in\",\"ine\",\"ique\",\"atoire\", \"u\",\"ue\",     \"issime\", \"able\",\"ible\", \"uble\", \"ième\",\"uple\"]\n",
+    "    list_noun = [\"ade\", \"age\",\"aille\", \"aison\", \"ison\",\"oison\", \"ation\", \"ition\",\"ssion\", \"sion\",\"xion\", \"isation\",\"ment\", \"ement\",\"erie\", \"ure\",\"ature\",\"at\", \"ance\",\"ence\", \"escence\",\"ité\", \"eté\",\"té\", \"ie\",\"erie\", \"esse\",\"ise\", \"eur\",\"isme\", \"iste\", \"seur\", \"isseur\", \"isateur\", \"euse\",\"isseuse\", \"atrice\",\"ier\",\"ière\", \"aire\",\"ien\", ienne\",\"iste\",er\",\"eron\",\"eronne\",\"trice\",\"oir\", \"oire\",\"ier\",\"ière\",\"erie\",\"anderie\", \"aire\",\"ain\",\"aille\", \"ée\", \"ard\",\"asse\", \"assier\",\"âtre\",\"aut\",\"eau\",\"ceau\", \"ereau\",\"eteau\", \"elle\", \"et\",\"elet\",\"ette\", \n",
+    "\"elette\",\"in\",\"otin\", \"ine\" \"illon\",\"on\", \"ille\", \"erole\",\"ole\",\"iche\"]\n",
+    "    \"\"\"\n",
+    "\n",
+    "    list_vb = [\"iser\",\"ifier\", \"oyer\",\"ailler\", \"asser\",\"eler\", \"eter\",\"iller\", \"iner\",\"nicher\", \"ocher\",\"onner\",\"otter\",\"oter\", \"ouiller\"]\n",
+    "    list_adj = [\"ain\", \"aine\",\"ains\", \"aines\",\"aire\", \"aires\",\"é\", \"ée\",\"ées\", \"és\",\"iel\", \"iels\",\"uel\", \"uels\", \n",
+    "\"lle\", \"lles\",\"els\", \"el\" \"al\", \"ales\", \"al\", \"ial\", \"aux\",\"iaux\", \"er\",\"ers\", \"ère\",\"ères\", \"ier\", \"iers\",      \"esque\",\"esques\", \"eur\",\"eurs\", \"euse\",\"euses\", \"ieux\",\"ueux\", \"if\", \"ifs\",\"ive\", \"ives\",\"in\", \"ins\",\"ine\",      \"ines\",\"iques\", \"ique\",\"atoire\", \"u\",\"ue\", \"us\",\"ues\", \"issime\",\"issimes\",\"able\",\"ible\", \"ibles\",\"ables\",  \n",
+    "    \"uble\",\"ubles\", \"ième\",\"ièmes\", \"uple\"]\n",
+    "    list_noun = [\"ade\", \"ades\", \"age\", \"ages\",\"aille\", \"ailles\", \"aison\", \"ison\", \"isons\",\"oison\", \"ation\", \"itions\", \"ition\", \"ssion\", \"sion\",\"xion\", \"isation\",\"ment\", \"ement\",\"erie\", \"eries\",\"ure\",\"ures\",\"ature\", \"atures\",\"at\", \"ance\",\"ence\", \"escence\",\"ité\", \"eté\",\"té\", \"ie\",\"erie\", \"esse\", \"ise\", \"eur\",\"isme\", \"iste\", \"istes\",\"eurs\", \"seur\",\"seurs\", \"isseur\",\"isseurs\", \"isateur\",\"euse\", \"euses\",\"isseuse\", \"isseuses\",       \"atrice\", \"atrices\",\"ier\", \"iers\",\"ière\", \"ières\",\"aire\",\"aires\",\"ien\", \"iens\",\"ienne\", \"iennes\",\"iste\",         \"istes\",\"er\", \"ers\",\"eron\", \"erons\",\"eronne\",\"trice\",\"oir\", \"oire\",\"oires\", \"oirs\",\"ier\", \"iers\",\"ière\",         \"ières\",\"erie\",\"eries\",\"anderie\",\"aire\", \"aires\",\"ain\", \"aines\", \"ée\",\"ées\",\"aille\", \"ard\",\"asse\", \"asses\", \"assier\",\"âtre\",\"aut\",\"eau\", \"eaux\",\"ceau\", \"ereau\",\"eteau\", \"elle\",\"elles\", \"et\",\"elet\",\"ets\",\"ette\",\"elette\",\"ettes\", \"elettes\",\"in\", \"ins\",\"otin\", \"ine\",\"ines\", \"illon\",\"on\",\"ons\",\"ille\", \"erole\",\"eroles\", \"ole\",\"oles\", \"iche\"]\n",
     "\n",
     "    for phrase in corpus: # ajout des features additionnelles\n",
     "        for prev, word, suiv in zip([\"START\"] + phrase[\"mots\"][:-1], phrase[\"mots\"], phrase[\"mots\"][1:] + [\"END\"]):\n",
     "            # création de triplets (mot précédent, mot, mot suivant)\n",
     "            # avec \"START\" en prev pour le 1er mot\n",
     "            # et \"END\" en suiv pour le dernier\n",
+    "\n",
+    "            lemma = phrase[\"lemme\"][phrase[\"mots\"].index(word)] \n",
     "\n",
     "            # ajout d'un dictionnaire de features du mot au corpus\n",
     "            corpus_features.append({mot : word, \n",
@@ -169,7 +191,16 @@
     "                mot_suiv : suiv,\n",
     "                num : word.isnumeric(),\n",
     "                nonAlphanum : not word.isalnum(),\n",
-    "                long : len(word)})\n",
+    "                long : 3 if len(word) > 3 else 1 if len(word) == 1 else 2,\n",
+    "                suff_adv : word.endswith(\"ment\"),\n",
+    "                suff_noun : any(word.endswith(elem) for elem in list_noun),\n",
+    "                suff_adj : any(word.endswith(elem) for elem in list_adj),\n",
+    "                suff_vb : any(word.endswith(elem) for elem in list_vb)\n",
+    "                # suff_noun : any(lemma.endswith(elem) for elem in list_noun),\n",
+    "                # suff_adj : any(lemma.endswith(elem) for elem in list_adj),\n",
+    "                # suff_vb : any(lemma.endswith(elem) for elem in list_vb)\n",
+    "                \n",
+    "                })\n",
     "\n",
     "    return corpus_features # renvoie les features transformés en vecteurs one-hot\n",
     "\n",
@@ -181,19 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'mot': 'sont', 'gold_label': 'AUX', 'préc': 'cérébrales', 'suiv': 'devenu', 'nb': False, 'non alphanum': False, 'longueur': 4}\n{'mot': 'devenu', 'gold_label': 'VERB', 'préc': 'sont', 'suiv': 'si', 'nb': False, 'non alphanum': False, 'longueur': 6}\n{'mot': 'si', 'gold_label': 'ADV', 'préc': 'devenu', 'suiv': 'courantes', 'nb': False, 'non alphanum': False, 'longueur': 2}\n364349\n"
+      "{'mot': 'Les', 'gold_label': 'DET', 'préc': 'START', 'suiv': 'commotions', 'nb': False, 'non alphanum': False, 'longueur': 2, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}\n{'mot': 'commotions', 'gold_label': 'NOUN', 'préc': 'Les', 'suiv': 'cérébrales', 'nb': False, 'non alphanum': False, 'longueur': 3, 'suffixe adv': False, 'suffixe nom': True, 'suffixe adj': False, 'suffixe verb': False}\n{'mot': 'cérébrales', 'gold_label': 'ADJ', 'préc': 'commotions', 'suiv': 'sont', 'nb': False, 'non alphanum': False, 'longueur': 3, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': True, 'suffixe verb': False}\n{'mot': 'sont', 'gold_label': 'AUX', 'préc': 'cérébrales', 'suiv': 'devenu', 'nb': False, 'non alphanum': False, 'longueur': 3, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}\n{'mot': 'devenu', 'gold_label': 'VERB', 'préc': 'sont', 'suiv': 'si', 'nb': False, 'non alphanum': False, 'longueur': 3, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': True, 'suffixe verb': False}\n{'mot': 'si', 'gold_label': 'ADV', 'préc': 'devenu', 'suiv': 'courantes', 'nb': False, 'non alphanum': False, 'longueur': 2, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}\n{'mot': 'courantes', 'gold_label': 'ADJ', 'préc': 'si', 'suiv': 'dans', 'nb': False, 'non alphanum': False, 'longueur': 3, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}\n{'mot': 'dans', 'gold_label': 'ADP', 'préc': 'courantes', 'suiv': 'ce', 'nb': False, 'non alphanum': False, 'longueur': 3, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}\n{'mot': 'ce', 'gold_label': 'DET', 'préc': 'dans', 'suiv': 'sport', 'nb': False, 'non alphanum': False, 'longueur': 2, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}\n{'mot': 'sport', 'gold_label': 'NOUN', 'préc': 'ce', 'suiv': \"qu'\", 'nb': False, 'non alphanum': False, 'longueur': 3, 'suffixe adv': False, 'suffixe nom': False, 'suffixe adj': False, 'suffixe verb': False}\n364349\n"
      ]
     }
    ],
    "source": [
-    "print(*gsd_train_features[3:6], sep=\"\\n\")\n",
+    "print(*gsd_train_features[:10], sep=\"\\n\")\n",
     "print(len(gsd_train_features))"
    ]
   },
