--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -165,7 +165,7 @@
     "    corpus_features = []\n",
     "    \"\"\"\n",
     "    Listes à utiliser pour les lemmes :\n",
-    "    list_adj = [\"ain\", \"aine\",\"aire\",\"é\", \"ée\",\"iel\", \"uel\", \"lle\",  \"al\", \"ales\", \"al\", \"ial\", \"aux\",\"iaux\",   \"er\", \"ère\", \"ier\", \"esque\", \"eur\", \"euse\", \"ieux\",\"ueux\", \"if\",\"ive\", \"in\",\"ine\",\"ique\",\"atoire\", \"u\",\"ue\",     \"issime\", \"able\",\"ible\", \"uble\", \"ième\",\"uple\"]\n",
+    "    list_adj = [\"ain\", \"aine\",\"aire\",\"é\", \"ée\",\"iel\", \"uel\", \"lle\",  \"al\", \"ales\", \"al\", \"ial\",\"er\", \"ère\", \"ier\", \"esque\", \"eur\", \"euse\", \"ieux\",\"ueux\", \"if\",\"ive\", \"in\",\"ine\",\"ique\",\"atoire\", \"u\",\"ue\", \"issime\", \"able\",\"ible\", \"uble\", \"ième\",\"uple\"]\n",
     "    list_noun = [\"ade\", \"age\",\"aille\", \"aison\", \"ison\",\"oison\", \"ation\", \"ition\",\"ssion\", \"sion\",\"xion\", \"isation\",\"ment\", \"ement\",\"erie\", \"ure\",\"ature\",\"at\", \"ance\",\"ence\", \"escence\",\"ité\", \"eté\",\"té\", \"ie\",\"erie\", \"esse\",\"ise\", \"eur\",\"isme\", \"iste\", \"seur\", \"isseur\", \"isateur\", \"euse\",\"isseuse\", \"atrice\",\"ier\",\"ière\", \"aire\",\"ien\", ienne\",\"iste\",er\",\"eron\",\"eronne\",\"trice\",\"oir\", \"oire\",\"ier\",\"ière\",\"erie\",\"anderie\", \"aire\",\"ain\",\"aille\", \"ée\", \"ard\",\"asse\", \"assier\",\"âtre\",\"aut\",\"eau\",\"ceau\", \"ereau\",\"eteau\", \"elle\", \"et\",\"elet\",\"ette\", \n",
     "\"elette\",\"in\",\"otin\", \"ine\" \"illon\",\"on\", \"ille\", \"erole\",\"ole\",\"iche\"]\n",
     "    \"\"\"\n",
@@ -193,10 +193,11 @@
     "                nonAlphanum : not word.isalnum(),\n",
     "                long : 3 if len(word) > 3 else 1 if len(word) == 1 else 2,\n",
     "                suff_adv : word.endswith(\"ment\"),\n",
-    "                suff_noun : any(word.endswith(elem) for elem in list_noun),\n",
-    "                suff_adj : any(word.endswith(elem) for elem in list_adj),\n",
+    "                suff_noun : any(word.endswith(elem) and len(word) != len(elem) for elem in list_noun),\n",
+    "                suff_adj : any(word.endswith(elem) and len(word) != len(elem) for elem in list_adj),\n",
     "                suff_vb : any(word.endswith(elem) for elem in list_vb)\n",
-    "                # suff_noun : any(lemma.endswith(elem) for elem in list_noun),\n",
+    "                # on vérifie la longueur du mot pour être sûr que ce soit un suffixe car on peut avoir le mot                      age avec le suffixe age par exemple ou bien aux\n",
+    "                # suff_noun : any(lemma.endswith(elem) and len(word) != len(elem) for elem in list_noun),\n",
     "                # suff_adj : any(lemma.endswith(elem) for elem in list_adj),\n",
     "                # suff_vb : any(lemma.endswith(elem) for elem in list_vb)\n",
     "                \n",
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
